@@ -1,5 +1,7 @@
 Revision history for Perl extension Module::Build.
 
+  - Honor environmental variables when using TAP::Harness directly [Leon Timmermans]
+
   - Reintroduce some level of perl 5.6 support [Leon Timmermans]
     Note that this comes with no guarantees or commitment
 
